--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,5 +1,3 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
 /.pnp
@@ -32,6 +30,10 @@ yarn-error.log*
 
 # env files (can opt-in for committing if needed)
 .env*
+.venv
+venv/
+ENV/
+env/
 
 # vercel
 .vercel
@@ -41,3 +43,13 @@ yarn-error.log*
 next-env.d.ts
 
 __pycache__/
+*.py[cod]
+*$py.class
+*.pyc
+
+.vscode/
+.idea/
+
+dist/
+build/
+*.egg-info/
